--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.5.1",
     "cors": "^2.8.5",
     "firebase": "^10.5.0",
+    "openai": "^4.52.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
