--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,11 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-#my database and firebase file I created.
+#file for the database configuration.
 dbConfig.js
+
+#file for the firebase configuration. 
 fireBaseConfig.js
+
+#directory for user uploaded files.
+**/uploaded_files/
