--- a/src/server/package.json
+++ b/src/server/package.json
@@ -11,8 +11,11 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "mysql2": "^3.6.1",
-    "openai": "^4.52.7"
+    "openai": "^4.52.7",
+    "path": "^0.12.7",
+    "pdf-parse": "^1.1.1"
   }
 }
