--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "openai": "^4.52.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.3.0",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.16.0",
     "react-scripts": "^5.0.1",
     "web-vitals": "^3.5.0"
