--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@lexical/react": "^0.18.0",
     "@monaco-editor/react": "^4.6.0",
     "@testing-library/jest-dom": "^6.1.3",
     "@testing-library/react": "^14.0.0",
@@ -10,6 +11,7 @@
     "axios": "^1.5.1",
     "cors": "^2.8.5",
     "firebase": "^10.5.0",
+    "lexical": "^0.18.0",
     "monaco-editor": "^0.52.0",
     "openai": "^4.52.7",
     "react": "^18.2.0",
